--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@clr/angular": "^3.1.5",
+    "@clr/icons": "next",
+    "@clr/ui": "next",
+    "@types/jquery": "^3.5.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
